--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -25,7 +25,7 @@
           maxlength="100" value={{LName}}>
         </div>
         <div class="input-group">
-          <label for="District">Input District Code</label>
+          <label for="District">Input District</label>
           <input type="text" name="District" id="District" class="input-box" placeholder="star"
           maxlength="100" value={{District}}>
         </div>
