--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -16,17 +16,17 @@
         </div>
         <div class="input-group">
           <label for="FName">Input First Name</label>
-          <input type="text" name="FName" id="FName" class="input-box" placeholder="atk"
+          <input type="text" name="FName" id="FName" class="input-box" placeholder="First Name"
           maxlength="100" value={{FName}}>
         </div>
         <div class="input-group">
           <label for="LName">Input Last Name</label>
-          <input type="text" name="LName" id="LName" class="input-box" placeholder="def"
+          <input type="text" name="LName" id="LName" class="input-box" placeholder="Last Name"
           maxlength="100" value={{LName}}>
         </div>
         <div class="input-group">
           <label for="District">Input District</label>
-          <input type="text" name="District" id="District" class="input-box" placeholder="star"
+          <input type="text" name="District" id="District" class="input-box" placeholder="District"
           maxlength="100" value={{District}}>
         </div>
         {{!-- <div class="input-group">
